# soccer-communication-module

./: README.md  update.md
.github/workflows/: firmware-release-legacy-c6.yml  firmware-release.yml
3d_model/: hub_board.step
docs/ai/: 00_project_overview.md  01_repository_map.md  02_firmware_architecture.md  03_ble_protocol.md  04_state_machine.md  05_hardware_mapping.md  06_display_and_user_feedback.md  07_build_release_and_flasher.md  08_mobile_app_interaction.md  09_known_issues_and_open_questions.md  10_future_change_plan.md  11_legacy_c6_firmware.md  ESP32C5_RCJ_modul_hardware_reference.md  README.md
eagle_files/: RCJ_com_v2.brd  RCJ_com_v2.sch
firmware/: RCJ2023_rc_module.ino  RCJ2024_rc_module.ino
firmware/RCj_comm_module/: .gitignore  AI_HANDOFF.md  CMakeLists.txt  RCj_comm_module.ino  ble.cpp  ble_processing.cpp  ble_processing.h  buzzer.cpp  buzzer.h  definitions.h  display.cpp  display.h  fonts.h  functions.cpp  functions.h  images.h  sdkconfig.debug  sdkconfig.defaults  serial_status.cpp  serial_status.h  state_machine.cpp  state_machine.h  status_led.cpp  status_led.h
firmware/RCj_comm_module/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
firmware/eindhoven/RCj_2nd_rc_module_2024/: RCj_2nd_rc_module_2024.ino  ble.cpp  ble.h  ble_processing.cpp  (+6 more)
jlcpcb_gerbers/: PickAndPlace_modul_2024-04-05.xlsx  RCJ_com_v2_top_bom.csv  RCJ_com_v2_top_cpl.csv
mobileAPP/: RCJ_ScoreBoard_France.aia
pcb_library/: RCJ-COM 2024 eagle.lbr  RCJ-COM 2024.IntLib
pcb_schematic/: easy_eda_pro_file.epro
tools/: prepare_firmware_release.py
web/flasher/: app.js  index.html  styles.css
(+24 files in other folders)
